--- a/iaroapp/templates/registration/login.html
+++ b/iaroapp/templates/registration/login.html
@@ -108,7 +108,7 @@
         <input type="hidden" name="next" value="{{ next }}">
         <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
         <br><br>
-        <p><a href="{% url 'password_reset' %}" class="text-muted">Lost password?</a></p>
+{#        <p><a href="{% url 'password_reset' %}" class="text-muted">Lost password?</a></p>#}
         <p><a href="{% url 'register'%}" class="text-muted">Register</a></p>
       </form>
 
