--- a/iaroapp/templates/includes/navigation.html
+++ b/iaroapp/templates/includes/navigation.html
@@ -7,7 +7,7 @@
         <div class="collapse navbar-collapse mt-sm-0 me-md-0 me-sm-4" id="navbar">
             <div class="ms-md-auto pe-md-3 d-flex align-items-center">
             </div>
-            <form id="logout_form" method="post" action="{% url 'logout' %}">
+{#            <form id="logout_form" method="post" action="{% url 'logout' %}">#}
                 {% csrf_token %}
             </form>
             <ul class="navbar-nav justify-content-end">
@@ -27,10 +27,14 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="{% url 'profile' %}">Profile</a></li>
-                    {#        <li><a class="dropdown-item" href="{% url 'password' %}">Change password</a></li>  // TODO: Add profile page#}
-                            <li><a class="dropdown-item" href="#" onclick="document.getElementById('logout_form').submit(); return false;">Logout</a></li>
+                            <li>
+                                <form id="logout_form" action="{% url 'logout' %}" method="post" style="display: none;">
+                                    {% csrf_token %}
+                                </form>
+                                <a class="dropdown-item" href="#" onclick="event.preventDefault(); document.getElementById('logout_form').submit();">Logout</a>
+                            </li>
                             {% if request.user.is_superuser %}
-                            <li><a class="dropdown-item" href="{% url 'admin:index' %}">Admin Panel</a></li>
+                                <li><a class="dropdown-item" href="{% url 'admin:index' %}">Admin Panel</a></li>
                             {% endif %}
                         </ul>
                     </li>
