--- a/users/templates/profile.html
+++ b/users/templates/profile.html
@@ -1,80 +1,152 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
+    <div class="row">
 
-<div class="center">
-    <form id="logout_form" method="post" action="{% url 'logout' %}">
-        {% csrf_token %}
-    </form>
-    <form method="POST" enctype="multipart/form-data" class="card p-4">
-        {% csrf_token %}
-        <div class="d-flex justify-content-center">
-            {% if user.profile %}
-                <img class="img-fluid avatar-img" src="{{ user.profile.avatar.url }}" alt="{{ user.username }}'s avatar" accept=".jpg,.jpeg,.png"/>
-            {% endif %}
+        <div class="col-lg-4 mb-4">
+            <div class="card h-100 p-4">
+                <form id="logout_form" method="post" action="{% url 'logout' %}">
+                    {% csrf_token %}
+                </form>
+                <form method="POST" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    <div class="d-flex justify-content-center">
+                        {% if user.profile %}
+                            <img class="img-fluid avatar-img" src="{{ user.profile.avatar.url }}"
+                                 alt="{{ user.username }}'s avatar" accept=".jpg,.jpeg,.png"/>
+                        {% endif %}
+                    </div>
+                    <h2 class="text-center">{{ user.username | title }}</h2>
+                    <p class="text-center"><a style="color: black;" href="mailto:{{ user.email }}">{{ user.email }}</a></p>
+                    <hr>
+
+                    <div class="mb-3">
+                        <label for="id_username" class="form-label">Username</label>
+                        <input type="text" class="form-control" id="id_username" name="username"
+                               value="{{ user_form.username.value }}" required>
+                        {% if user_form.username.errors %}
+                            <div class="text-danger">
+                                {% for error in user_form.username.errors %}
+                                    <p>{{ error }}</p>
+                                {% endfor %}
+                            </div>
+                        {% endif %}
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="id_email" class="form-label">Email address</label>
+                        <input type="email" class="form-control" id="id_email" name="email"
+                               value="{{ user_form.email.value }}" required>
+                        {% if user_form.email.errors %}
+                            <div class="text-danger">
+                                {% for error in user_form.email.errors %}
+                                    <p>{{ error }}</p>
+                                {% endfor %}
+                            </div>
+                        {% endif %}
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="id_avatar" class="form-label">Avatar</label>
+                        <input type="file" class="form-control" id="id_avatar" name="avatar" accept=".jpg,.jpeg,.png">
+                        {% if profile_form.avatar.errors %}
+                            <div class="text-danger">
+                                {% for error in profile_form.avatar.errors %}
+                                    <p>{{ error }}</p>
+                                {% endfor %}
+                            </div>
+                        {% endif %}
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="id_branch" class="form-label">Branch</label>
+                        <select class="form-control" style="color: #495057 !important;" id="id_branch" name="branch">
+                            {% for branch in profile_form.branch.field.queryset %}
+                                <option value="{{ branch.id }}"
+                                        {% if branch.id == profile_form.branch.value %}selected{% endif %}>{{ branch.name }}</option>
+                            {% endfor %}
+                        </select>
+                        {% if profile_form.branch.errors %}
+                            <div class="text-danger">
+                                {% for error in profile_form.branch.errors %}
+                                    <p>{{ error }}</p>
+                                {% endfor %}
+                            </div>
+                        {% endif %}
+                    </div>
+
+                    <button type="submit" class="w-100 btn bg-gradient-primary">Update Profile</button>
+
+                    <button type="button" class="w-100 btn bg-gradient-primary"
+                            onclick="document.getElementById('logout_form').submit(); return false;">Logout
+                    </button>
+
+                </form>
+            </div>
         </div>
-        <h2 class="text-center">{{ user.username | title }}</h2>
-        <p class="text-center"><a style="color: black;" href="mailto:{{user.email}}">{{user.email}}</a></p>
-        <hr>
 
-        <div class="mb-3">
-            <label for="id_username" class="form-label">Username</label>
-            <input type="text" class="form-control" id="id_username" name="username" value="{{ user_form.username.value }}" required>
-            {% if user_form.username.errors %}
-                <div class="text-danger">
-                    {% for error in user_form.username.errors %}
-                        <p>{{ error }}</p>
-                    {% endfor %}
-                </div>
-            {% endif %}
+        <div class="col-lg-4 mb-4">
+            <div class="card h-100 p-4">
+                <h6>Change Password</h6>
+                <form method="post" id="passwordChangeForm">
+                    {% csrf_token %}
+
+                    {% if password_form.non_field_errors %}
+                        <div class="alert alert-light">
+                            {% for error in password_form.non_field_errors %}
+                                <p class="text-sm">{{ error }}</p>
+                            {% endfor %}
+                        </div>
+                    {% endif %}
+
+                    <div class="form-group">
+                        {{ password_form.old_password.label_tag }}
+                        {{ password_form.old_password }}
+                        {% for error in password_form.old_password.errors %}
+                            <div class="alert alert-secondary text-danger text-sm mt-2 p-2 text-error">{{ error }}</div>
+                        {% endfor %}
+                    </div>
+
+                    <div class="form-group">
+                        {{ password_form.new_password1.label_tag }}
+                        {{ password_form.new_password1 }}
+                        {% for error in password_form.new_password1.errors %}
+                            <div class="alert alert-secondary text-danger text-sm mt-2 p-2 text-error">{{ error }}</div>
+                        {% endfor %}
+                    </div>
+
+                    <div class="form-group">
+                        {{ password_form.new_password2.label_tag }}
+                        {{ password_form.new_password2 }}
+                        {% for error in password_form.new_password2.errors %}
+                            <div class="alert alert-secondary text-danger text-sm mt-2 p-2 text-error">{{ error }}</div>
+                        {% endfor %}
+                    </div>
+
+                    <button type="submit" class="w-100 btn bg-gradient-primary" name="password_form">Change Password
+                    </button>
+                </form>
+            </div>
         </div>
+    </div>
 
-        <div class="mb-3">
-            <label for="id_email" class="form-label">Email address</label>
-            <input type="email" class="form-control" id="id_email" name="email" value="{{ user_form.email.value }}" required>
-            {% if user_form.email.errors %}
-                <div class="text-danger">
-                    {% for error in user_form.email.errors %}
-                        <p>{{ error }}</p>
-                    {% endfor %}
-                </div>
-            {% endif %}
-        </div>
+    <style>
+        .card {
+            max-width: 500px;
+        }
+        .text-error {
+            border-radius: 0.5rem !important;
+        }
 
-        <div class="mb-3">
-            <label for="id_avatar" class="form-label">Avatar</label>
-            <input type="file" class="form-control" id="id_avatar" name="avatar" accept=".jpg,.jpeg,.png">
-            {% if profile_form.avatar.errors %}
-                <div class="text-danger">
-                    {% for error in profile_form.avatar.errors %}
-                        <p>{{ error }}</p>
-                    {% endfor %}
-                </div>
-            {% endif %}
-        </div>
+    </style>
 
-        <div class="mb-3">
-            <label for="id_branch" class="form-label">Branch</label>
-            <select class="form-control" style="color: #495057 !important;" id="id_branch" name="branch">
-                {% for branch in profile_form.branch.field.queryset %}
-                    <option value="{{ branch.id }}" {% if branch.id == profile_form.branch.value %}selected{% endif %}>{{ branch.name }}</option>
-                {% endfor %}
-            </select>
-            {% if profile_form.branch.errors %}
-                <div class="text-danger">
-                    {% for error in profile_form.branch.errors %}
-                        <p>{{ error }}</p>
-                    {% endfor %}
-                </div>
-            {% endif %}
-        </div>
-
-        <button type="submit" class="w-100 btn bg-gradient-primary">Update Profile</button>
-        <br><br>
-        <button type="button" class="w-100 btn bg-gradient-primary" onclick="document.getElementById('logout_form').submit(); return false;">Logout</button>
-
-    </form>
-</div>
-
-
+            <script>
+            document.addEventListener('DOMContentLoaded', function () {
+                var passwordChangeForm = document.getElementById('passwordChangeForm');
+                var passwordFields = passwordChangeForm.querySelectorAll('input[type="password"]');
+                passwordFields.forEach(function (field) {
+                    field.value = '';
+                });
+            });
+        </script>
 {% endblock content %}
