--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -7,7 +7,7 @@
     {% load static %}
 
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-    <link rel="stylesheet" href="{% static 'css/login.css' %}">
+    <link rel="stylesheet" href="{% static 'css/singin-signup.css' %}">
 
     <link href="{% static 'bootstrap/dist/css/bootstrap.min.css' %}" rel="stylesheet">
     <link rel="stylesheet"
