--- a/users/templates/register.html
+++ b/users/templates/register.html
@@ -8,11 +8,14 @@
     {% load crispy_forms_tags %}
 
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-    <link rel="stylesheet" href="{% static 'css/register.css' %}">
+    <link rel="stylesheet" href="{% static 'css/singin-signup.css' %}">
 
     <link href="{% static 'bootstrap/dist/css/bootstrap.min.css' %}" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+          integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link id="pagestyle" href="{% static 'softTheme/css/soft-ui-dashboard.css' %}" rel="stylesheet"/>
     <link rel="icon" href="{% static 'images/favicon.png' %}">
     <link rel="manifest" href="{% static 'manifest.json' %}">
@@ -20,97 +23,95 @@
 
 <body>
 <div class="container-fluid p-4">
-    <div class="form-wrapper">
-        <form method="post" enctype="multipart/form-data" class="card p-4">
-            {% csrf_token %}
-            <div class="logo-container text-center">
-                <img src="{% static 'images/logo.png' %}" alt="Logo" width="175" height="57">
+    <form method="post" enctype="multipart/form-data" class="card p-4">
+        {% csrf_token %}
+        <div class="logo-container text-center">
+            <img src="{% static 'images/logo.png' %}" alt="Logo" width="175" height="57">
+        </div>
+        {% if form.errors %}
+            <div class="alert alert-light" role="alert">
+                There were errors with your submission. Please correct them and try again.
             </div>
-            {% if form.errors %}
-                <div class="alert alert-light" role="alert">
-                    There were errors with your submission. Please correct them and try again.
-                </div>
-            {% endif %}
+        {% endif %}
 
-            <div class="input-group input-group-outline mb-3">
-                <span class="input-group-text"><i class="bi bi-person"></i></span>
-                <input type="text" class="form-control" id="id_username" name="username" placeholder="Username"
-                       required>
+        <div class="input-group input-group-outline mb-3">
+            <span class="input-group-text"><i class="bi bi-person"></i></span>
+            <input type="text" class="form-control" id="id_username" name="username" placeholder="Username"
+                   required>
+        </div>
+        {% if form.username.errors %}
+            <div class="text-danger">
+                {% for error in form.username.errors %}
+                    <p>{{ error }}</p>
+                {% endfor %}
             </div>
-            {% if form.username.errors %}
-                <div class="text-danger">
-                    {% for error in form.username.errors %}
-                        <p>{{ error }}</p>
-                    {% endfor %}
-                </div>
-            {% endif %}
+        {% endif %}
 
-            <div class="input-group input-group-outline mb-3">
-                <span class="input-group-text"><i class="bi bi-envelope"></i></span>
-                <input type="email" class="form-control" id="id_email" name="email"
-                       placeholder="Email address (Planday)" required>
+        <div class="input-group input-group-outline mb-3">
+            <span class="input-group-text"><i class="bi bi-envelope"></i></span>
+            <input type="email" class="form-control" id="id_email" name="email"
+                   placeholder="Email address (Planday)" required>
+        </div>
+        {% if form.email.errors %}
+            <div class="text-danger">
+                {% for error in form.email.errors %}
+                    <p class="text-sm">{{ error }}</p>
+                {% endfor %}
             </div>
-            {% if form.email.errors %}
-                <div class="text-danger">
-                    {% for error in form.email.errors %}
-                        <p class="text-sm">{{ error }}</p>
-                    {% endfor %}
-                </div>
-            {% endif %}
+        {% endif %}
 
-            <div class="input-group input-group-outline mb-3">
-                <span class="input-group-text"><i class="bi bi-key"></i></span>
-                <input type="password" class="form-control" id="id_password1" name="password1" placeholder="Password"
-                       required>
+        <div class="input-group input-group-outline mb-3">
+            <span class="input-group-text"><i class="bi bi-key"></i></span>
+            <input type="password" class="form-control" id="id_password1" name="password1" placeholder="Password"
+                   required>
+        </div>
+        {% if form.password1.errors %}
+            <div class="text-danger">
+                {% for error in form.password1.errors %}
+                    <p class="text-sm">{{ error }}</p>
+                {% endfor %}
             </div>
-            {% if form.password1.errors %}
-                <div class="text-danger">
-                    {% for error in form.password1.errors %}
-                        <p class="text-sm">{{ error }}</p>
-                    {% endfor %}
-                </div>
-            {% endif %}
+        {% endif %}
 
-            <div class="input-group input-group-outline mb-3">
-                <span class="input-group-text"><i class="bi bi-key"></i></span>
-                <input type="password" class="form-control" id="id_password2" name="password2"
-                       placeholder="Password confirmation" required>
+        <div class="input-group input-group-outline mb-3">
+            <span class="input-group-text"><i class="bi bi-key"></i></span>
+            <input type="password" class="form-control" id="id_password2" name="password2"
+                   placeholder="Password confirmation" required>
+        </div>
+        {% if form.password2.errors %}
+            <div class="text-danger">
+                {% for error in form.password2.errors %}
+                    <p class="text-sm">{{ error }}</p>
+                {% endfor %}
             </div>
-            {% if form.password2.errors %}
-                <div class="text-danger">
-                    {% for error in form.password2.errors %}
-                        <p class="text-sm">{{ error }}</p>
-                    {% endfor %}
-                </div>
-            {% endif %}
+        {% endif %}
 
-            <div class="input-group input-group-outline mb-3">
-                <span class="input-group-text"><i class="bi bi-geo-alt"></i></span>
-                <select class="form-control" id="{{ form.branch.id_for_label }}" name="branch">
-                    {% for branch in form.branch.field.queryset %}
-                        <option value="{{ branch.id }}"
-                                {% if branch.id == form.branch.value %}selected{% endif %}>{{ branch.name }}</option>
-                    {% endfor %}
-                </select>
+        <div class="input-group input-group-outline mb-3">
+            <span class="input-group-text"><i class="bi bi-geo-alt"></i></span>
+            <select class="form-control" id="{{ form.branch.id_for_label }}" name="branch">
+                {% for branch in form.branch.field.queryset %}
+                    <option value="{{ branch.id }}"
+                            {% if branch.id == form.branch.value %}selected{% endif %}>{{ branch.name }}</option>
+                {% endfor %}
+            </select>
+        </div>
+        {% if form.branch.errors %}
+            <div class="text-danger">
+                {% for error in form.branch.errors %}
+                    <p class="text-sm">{{ error }}</p>
+                {% endfor %}
             </div>
-            {% if form.branch.errors %}
-                <div class="text-danger">
-                    {% for error in form.branch.errors %}
-                        <p class="text-sm">{{ error }}</p>
-                    {% endfor %}
-                </div>
-            {% endif %}
+        {% endif %}
 
-            <button class="btn bg-gradient-primary" type="submit">Register</button>
+        <button class="btn bg-gradient-primary" type="submit">Register</button>
 
-            <div class="text-center">
-                <label class="form-check-label" style="cursor: auto">
-                    Have an account?
-                    <a href="{% url 'login' %}" class="link-secondary text-decoration-none">Sign In</a>
-                </label>
-            </div>
-        </form>
-    </div>
+        <div class="text-center">
+            <label class="form-check-label" style="cursor: auto">
+                Have an account?
+                <a href="{% url 'login' %}" class="link-secondary text-decoration-none">Sign In</a>
+            </label>
+        </div>
+    </form>
 </div>
 
 <script src="{% static 'bootstrap/dist/js/bootstrap.bundle.min.js' %}"></script>
@@ -122,67 +123,22 @@
         box-shadow: 0 0 0 2px rgba(103, 116, 142, 0.15) !important;
         border-radius: 8px !important;
     }
+
     .focused .input-group-text {
         border-color: rgba(52, 71, 103, 0.4) !important;
 
     }
+
     .focused .input-group-text i {
         scale: 1.1;
         transition: scale 0.15s ease-in-out;
     }
+
     .input-group .form-control:focus {
         border-color: rgba(52, 71, 103, 0.4) !important;
         box-shadow: none !important;
         border-radius: 0 8px 8px 0 !important;
     }
-
-    body {
-        background-color: #e9ebe6 !important;
-        display: flex;
-        justify-content: center;
-        height: 100vh;
-        font-family: Inter, serif !important;
-        overflow: hidden;
-    }
-
-    .container-fluid {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100%;
-        overflow: hidden;
-    }
-
-    .form-wrapper {
-        display: flex;
-        justify-content: center;
-        overflow-y: auto;
-        width: 100%;
-    }
-
-    .card {
-        width: 500px;
-        max-width: 100%;
-    }
-
-    .logo-container {
-        margin-bottom: 1.5rem;
-        padding-bottom: 10px;
-        border-bottom: 1px solid;
-        border-image-slice: 1;
-        border-image-source: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 50%, rgba(0, 0, 0, 0) 100%);
-    }
-
-    .input-group-text {
-        border-right: 1px solid #d0d4d8 !important;
-        width: 40px !important;
-        justify-content: center;
-        border-radius: 8px 0 0 8px !important;
-    }
-
-    .form-control {
-        padding-left: 1rem !important;
-        border-radius: 0 8px 8px 0 !important;
-    }
 </style>
+
 </html>
