--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -56,7 +56,7 @@
                 <label class="form-check-label" for="rememberMe">Remember me</label>
             </div>
             <label class="form-check-label">
-                <a href="{% url 'register' %}" class="link-secondary text-decoration-none">Forgot Password?</a>
+                <a href="{% url 'login' %}" class="link-secondary text-decoration-none">Forgot Password?</a>
             </label>
         </div>
 
