--- a/users/templates/register.html
+++ b/users/templates/register.html
@@ -36,8 +36,7 @@
 
         <div class="input-group input-group-outline mb-3">
             <span class="input-group-text"><i class="bi bi-person"></i></span>
-            <input type="text" class="form-control" id="id_username" name="username" placeholder="Username"
-                   required>
+            <input type="text" class="form-control" id="id_username" name="username" placeholder="Username" required>
         </div>
         {% if form.username.errors %}
             <div class="text-danger">
@@ -46,11 +45,15 @@
                 {% endfor %}
             </div>
         {% endif %}
+        <div id="help_username" class="text-xxs p-0 hidden_text">
+            <ul>
+                <li>Required. Letters, digits and @/./+/-/_ only.</li>
+            </ul>
+        </div>
 
         <div class="input-group input-group-outline mb-3">
             <span class="input-group-text"><i class="bi bi-envelope"></i></span>
-            <input type="email" class="form-control" id="id_email" name="email"
-                   placeholder="Email address (Planday)" required>
+            <input type="email" class="form-control" id="id_email" name="email" placeholder="Email address" required>
         </div>
         {% if form.email.errors %}
             <div class="text-danger">
@@ -59,6 +62,11 @@
                 {% endfor %}
             </div>
         {% endif %}
+        <div id="help_email" class="text-xxs p-0 hidden_text">
+            <ul>
+                <li>Required. Your Email address should be same as Planday Email.</li>
+            </ul>
+        </div>
 
         <div class="input-group input-group-outline mb-3">
             <span class="input-group-text"><i class="bi bi-key"></i></span>
@@ -72,6 +80,12 @@
                 {% endfor %}
             </div>
         {% endif %}
+
+        <div class="text-xxs p-0 hidden_text" id="help_password1">
+            {% if form.password1.help_text %}
+                {{ form.password1.help_text }}
+            {% endif %}
+        </div>
 
         <div class="input-group input-group-outline mb-3">
             <span class="input-group-text"><i class="bi bi-key"></i></span>
@@ -117,6 +131,31 @@
 <script src="{% static 'bootstrap/dist/js/bootstrap.bundle.min.js' %}"></script>
 <script src="{% static 'softTheme/js/soft-ui-dashboard.min.js' %}"></script>
 </body>
+
+<script>
+document.addEventListener("DOMContentLoaded", function() {
+    const fields = [
+        {input: document.getElementById('id_username'), helpText: document.getElementById('help_username')},
+        {input: document.getElementById('id_email'), helpText: document.getElementById('help_email')},
+        {input: document.getElementById('id_password1'), helpText: document.getElementById('help_password1')}
+    ];
+
+    fields.forEach(field => {
+        field.input.addEventListener('focus', function() {
+            field.helpText.classList.remove('hidden_text');
+            field.helpText.classList.add('visible_text');
+        });
+
+        field.input.addEventListener('blur', function() {
+            field.helpText.classList.remove('visible_text');
+            field.helpText.classList.add('hidden_text');
+        });
+    });
+});
+</script>
+
+
+
 
 <style>
     .input-group-outline:focus-within {
