Adjusted popularitytimes display

--- a/iaroapp/templates/index.html
+++ b/iaroapp/templates/index.html
@@ -217,16 +217,16 @@
                            value="{{ formatted_address }}">
 
                     <button
-                            class="h6 text-bold mt-3 w-35 {% if formatted_address == 'Iaro Ost Karlsruhe' %}btn-active{% else %}btn-default{% endif %}"
+                            class="h6 text-bold mt-3 w-35 {% if formatted_address == 'iaro Ost Karlsruhe' %}btn-active{% else %}btn-default{% endif %}"
                             type="submit"
-                            onclick="document.getElementById('formatted_address').value='Iaro Ost Karlsruhe';">
+                            onclick="document.getElementById('formatted_address').value='iaro Ost Karlsruhe';">
                         Iaro Ost
                     </button>
 
                     <button
-                            class="h6 text-bold mt-3 w-35 {% if formatted_address == 'Iaro West Karlsruhe' %}btn-active{% else %}btn-default{% endif %}"
+                            class="h6 text-bold mt-3 w-35 {% if formatted_address == 'iaro West Karlsruhe' or 'iaro Space Karlsruhe' %}btn-active{% else %}btn-default{% endif %}"
                             type="submit"
-                            onclick="document.getElementById('formatted_address').value='Iaro West Karlsruhe';">
+                            onclick="document.getElementById('formatted_address').value='iaro West Karlsruhe';">
                         Iaro West
                     </button>
                 </form>
