--- a/iaroapp/templates/index.html
+++ b/iaroapp/templates/index.html
@@ -211,25 +211,24 @@
                     </div>
                 </div>
 
-                <form class="d-flex justify-content-center gap-2 mb-4" method="GET"
-                      action="{% url 'index' %}#popular-times">
-                    <input type="hidden" name="formatted_address" id="formatted_address"
-                           value="{{ formatted_address }}">
+<form class="d-flex justify-content-center gap-2 mb-4" method="GET" action="{% url 'index' %}#popular-times">
+    <input type="hidden" name="formatted_address" id="formatted_address" value="{{ formatted_address }}">
 
-                    <button
-                            class="h6 text-bold mt-3 w-35 {% if formatted_address == 'iaro Ost Karlsruhe' %}btn-active{% else %}btn-default{% endif %}"
-                            type="submit"
-                            onclick="document.getElementById('formatted_address').value='iaro Ost Karlsruhe';">
-                        Iaro Ost
-                    </button>
+    <button
+        class="h6 text-bold mt-3 w-35 {% if formatted_address == 'iaro Ost Karlsruhe' %}btn-active{% else %}btn-default{% endif %}"
+        type="submit"
+        onclick="document.getElementById('formatted_address').value='iaro Ost Karlsruhe';">
+        Iaro Ost
+    </button>
 
-                    <button
-                            class="h6 text-bold mt-3 w-35 {% if formatted_address == 'iaro West Karlsruhe' or 'iaro Space Karlsruhe' %}btn-active{% else %}btn-default{% endif %}"
-                            type="submit"
-                            onclick="document.getElementById('formatted_address').value='iaro West Karlsruhe';">
-                        Iaro West
-                    </button>
-                </form>
+    <button
+        class="h6 text-bold mt-3 w-35 {% if formatted_address == 'iaro West Karlsruhe' or formatted_address == 'iaro Space Karlsruhe' %}btn-active{% else %}btn-default{% endif %}"
+        type="submit"
+        onclick="document.getElementById('formatted_address').value='iaro West Karlsruhe';">
+        Iaro West
+    </button>
+</form>
+
             </div>
         </div>
 
