--- a/users/templates/register.html
+++ b/users/templates/register.html
@@ -28,77 +28,95 @@
         <div class="logo-container text-center">
             <img src="{% static 'images/logo.png' %}" alt="Logo" width="175" height="57">
         </div>
+
         {% if form.errors %}
-            <div class="alert alert-light" role="alert">
+            <div class="alert alert-light text-sm" role="alert">
                 There were errors with your submission. Please correct them and try again.
             </div>
         {% endif %}
+
 
         <div class="input-group input-group-outline mb-3">
             <span class="input-group-text"><i class="bi bi-person"></i></span>
             <input type="text" class="form-control" id="id_username" name="username" placeholder="Username" required>
         </div>
-        {% if form.username.errors %}
-            <div class="text-danger">
-                {% for error in form.username.errors %}
-                    <p>{{ error }}</p>
-                {% endfor %}
-            </div>
-        {% endif %}
-        <div id="help_username" class="text-xxs p-0 hidden_text">
+        <div id="help_username" class="text-xxs mt-0 p-0 hidden_text">
             <ul>
                 <li>Required. Letters, digits and @/./+/-/_ only.</li>
             </ul>
         </div>
+        {% if form.username.errors %}
+            <div class="text-danger mb-0 text-xxs">
+                <ul>
+                    {% for error in form.username.errors %}
+                        <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
+            </div>
+        {% endif %}
+
 
         <div class="input-group input-group-outline mb-3">
             <span class="input-group-text"><i class="bi bi-envelope"></i></span>
             <input type="email" class="form-control" id="id_email" name="email" placeholder="Email address" required>
         </div>
-        {% if form.email.errors %}
-            <div class="text-danger">
-                {% for error in form.email.errors %}
-                    <p class="text-sm">{{ error }}</p>
-                {% endfor %}
-            </div>
-        {% endif %}
         <div id="help_email" class="text-xxs p-0 hidden_text">
             <ul>
                 <li>Required. Your Email address should be same as Planday Email.</li>
             </ul>
         </div>
+        {% if form.email.errors %}
+            <div class="text-danger mb-0 text-xxs">
+                <ul>
+                    {% for error in form.email.errors %}
+                        <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
+            </div>
+        {% endif %}
+
 
         <div class="input-group input-group-outline mb-3">
             <span class="input-group-text"><i class="bi bi-key"></i></span>
             <input type="password" class="form-control" id="id_password1" name="password1" placeholder="Password"
                    required>
         </div>
-        {% if form.password1.errors %}
-            <div class="text-danger">
-                {% for error in form.password1.errors %}
-                    <p class="text-sm">{{ error }}</p>
-                {% endfor %}
-            </div>
-        {% endif %}
-
         <div class="text-xxs p-0 hidden_text" id="help_password1">
             {% if form.password1.help_text %}
                 {{ form.password1.help_text }}
             {% endif %}
         </div>
+        {% if form.password1.errors %}
+            <div class="text-danger mb-0 text-xxs">
+                <ul>
+                    {% for error in form.password1.errors %}
+                        <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
+            </div>
+        {% endif %}
+
 
         <div class="input-group input-group-outline mb-3">
             <span class="input-group-text"><i class="bi bi-key"></i></span>
             <input type="password" class="form-control" id="id_password2" name="password2"
                    placeholder="Password confirmation" required>
         </div>
+        <div class="text-xxs p-0 hidden_text" id="help_password1">
+            {% if form.password2.help_text %}
+                {{ form.password2.help_text }}
+            {% endif %}
+        </div>
         {% if form.password2.errors %}
-            <div class="text-danger">
-                {% for error in form.password2.errors %}
-                    <p class="text-sm">{{ error }}</p>
-                {% endfor %}
+            <div class="text-danger mb-0 text-xxs">
+                <ul>
+                    {% for error in form.password2.errors %}
+                        <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
             </div>
         {% endif %}
+
 
         <div class="input-group input-group-outline mb-3">
             <span class="input-group-text"><i class="bi bi-geo-alt"></i></span>
@@ -110,10 +128,12 @@
             </select>
         </div>
         {% if form.branch.errors %}
-            <div class="text-danger">
-                {% for error in form.branch.errors %}
-                    <p class="text-sm">{{ error }}</p>
-                {% endfor %}
+            <div class="text-danger mb-0 text-xxs">
+                <ul>
+                    {% for error in form.branch.errors %}
+                        <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
             </div>
         {% endif %}
 
