--- a/users/templates/profile.html
+++ b/users/templates/profile.html
@@ -138,7 +138,7 @@
                 <h6>Change Password</h6>
                 <form method="post" id="passwordChangeForm">
                     {% csrf_token %}
-                    <input type="hidden" name="password_change_form" value="password_change_form">
+                    <input type="hidden" name="password_change_form">
 
                     {% if password_form.non_field_errors %}
                         <div class="alert alert-light">
